[package]
name = "sleigh_derive"
version = "0.1.0"
authors = ["Erik Gilling <konkers@konkers.net>"]
edition = "2018"

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "0.4"
quote = "^0.6"
syn = { version = "0.15.38", features = ["derive", "parsing", "printing", "clone-impls", "proc-macro", "extra-traits"] }
